--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "recharts": "^2.11.0",
+    "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
