--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -20,7 +21,9 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.1",
     "recharts": "^2.11.0",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
   },
