--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
+    "react-swipeable": "^7.0.1",
     "recharts": "^2.11.0",
     "web-vitals": "^2.1.4"
   },
