--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "chart.js": "^4.4.2",
     "data-fns": "^1.1.0",
     "date-fns": "^3.3.1",
+    "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.9.2",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
