--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
@@ -33,6 +34,7 @@
     "react-slick": "^0.30.1",
     "react-swipeable": "^7.0.1",
     "recharts": "^2.11.0",
+    "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4"
