--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "date-fns": "^3.3.1",
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.9.2",
-    "framer-motion": "^11.0.6",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -36,7 +35,8 @@
     "recharts": "^2.11.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
