--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.9.2",
     "framer-motion": "^11.0.8",
+    "laravel-echo": "^1.16.1",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -32,11 +35,13 @@
     "react-select": "^5.8.0",
     "react-slick": "^0.30.1",
     "react-swipeable": "^7.0.1",
+    "react-use-websocket": "^4.8.1",
     "recharts": "^2.11.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.5",
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4",
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.35"
   },
   "scripts": {
     "start": "react-scripts start",
