--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.19",
     "@mui/system": "^5.15.15",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "chart.js": "^4.4.3",
     "data-fns": "^1.1.0",
@@ -30,6 +31,8 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
