--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "recharts": "^2.11.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.6",
+    "twilio": "^5.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
