--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -42,6 +43,12 @@
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.35"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.15.7",
+    "eslint": "^7.32.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-scope": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
