--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "cors": "^2.8.5",
     "data-fns": "^1.1.0",
     "date-fns": "^3.3.1",
     "emoji-mart": "^5.5.2",
@@ -27,10 +28,10 @@
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
+    "react-app-rewired": "^2.2.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2",
+    "react-facebook-login-lite": "^1.0.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
@@ -46,6 +47,7 @@
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "swiper": "^11.0.6",
+    "url": "^0.11.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
